vlib/v/checker/tests/asm_alias_does_not_exist.vv
unsafe asm amd64 {
	mov ebx, a
}
